fixing edit and delete buttons not showing correctly on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -253,3 +253,8 @@ p {
   font-weight: 600;
   font-size: 14px;
 }
+
+/*****************Button Fix********************/
+.buttonFix{
+    height: 100px;
+}
